# AI-EMPLOYEE

./: .mcp.json  CLAUDE.md  README.md
Hackathon-0/: .env.example  .gitignore  .mcp.json  README.md  ecosystem.config.js  main.py  pyproject.toml  start.sh
Hackathon-0/config/: vault_config.json
Hackathon-0/docs/: bugs.md  gold-tier.md  invoice-guide.md  odoo-tools.md  project-structure.md  quickstart.md
Hackathon-0/docs/archive/: silver-setup.md  silver-status.md
Hackathon-0/mcp-servers/email-mcp/: email-mcp.py
Hackathon-0/mcp-servers/odoo-mcp/: odoo-mcp.py
Hackathon-0/scripts/: authenticate_gmail.py  demo_invoice.py  drop_test_task.py  linkedin_login_auto.py  populate_odoo_data.py  post_social.py  send_invoice.py
Hackathon-0/src/dashboard/: updater.py
Hackathon-0/src/orchestrator/: controller.py
Hackathon-0/src/ralph/: loop_manager.py
Hackathon-0/src/scheduler/: job_scheduler.py
Hackathon-0/src/social/: browser_manager.py  facebook.py  linkedin.py  twitter.py
Hackathon-0/src/utils/: config_loader.py  file_lock.py  logger.py  secrets_manager.py  watchdog.py
Hackathon-0/src/vault/: constants.py  manager.py
Hackathon-0/src/watchers/: approved_email_sender.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  whatsapp_watcher.py
Hackathon-0/tests/integration/: test_bronze_flow.py  test_business_week.py  test_create_invoice.py  test_invoice_pdf_email.py  test_odoo_mcp.py  test_odoo_tools.py
Hackathon-0/tests/unit/test_orchestrator/: test_file_lock.py
Hackathon-0/tests/unit/test_ralph/: test_loop_manager.py
context/: Architecture.md  (+3 more)
(+43 files in other folders)
