[project]
name = "hackathon-0"
version = "0.1.0"
description = "Personal AI Employee - Bronze Phase Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "claude-code>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
